# PimpEx

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Prototype.puml  README.md  compile_commands.json  main.cpp  vcpkg.json
.cache/clangd/index/: Actor.h.3B846208FD43A368.idx  EngineFileChecker.cpp.905306243F1F768E.idx  EngineFileChecker.h.6866762F3CD32CC7.idx  EngineXML.h.DB4277255F88D574.idx  EngineXMLReader.cpp.71EE9DABCD08CC1F.idx  EngineXMLWriter.cpp.BE1F3C9CF0FB3EB5.idx  IEngineFileChecker.h.39FB445B3B30441C.idx  IEngineXMLReader.h.33BB3245BF57A846.idx  IEnigneXMLWriter.h.5428B0C1E5346595.idx  Project.h.7E6E59C66C0478FF.idx  Resource.h.B5B2CD8256170625.idx  Scene.h.EB76F734EB03CA5B.idx  Types.h.50BB011A1CDBB452.idx  Utils.h.5171FC559D45F6B6.idx  VibeXMLReader.cpp.ABA69E30A3339F46.idx  VibeXMLReader.h.C29A653963BB38DA.idx  main.cpp.DBBCF8B8AC8E7D21.idx  project.cpp.EDEF3F408F17C77D.idx
cmake/: test_xml_module.cmake
example_files/: game.xml
include/: EngineCLI.h  EngineFileChecker.h  EngineGraphics.h  EngineStorage.h  EngineXML.h  EnigneCore.h  GraphicsTypes.hpp  Types.h  Utils.h
include/cli_commands/: EngineBuildCommand.h  EngineDevCommand.h  EngineInitCommand.h  EngineUpdateCommand.h
include/ecs/: Transform.h
include/edm/: EngineDynamicMemory.hpp
include/entity/: Actor.h  Scene.h
include/graphics/: EngineCamera.hpp  EngineMouse.hpp  EngineRenderer.hpp  EngineScene.hpp  EnigneWindow.hpp
include/interfaces/: IEngineActorAPI.h  IEngineApp.h  IEngineCommand.h  IEngineConfigurationAPI.h  IEngineContextAPI.h  IEngineFileChecker.h  IEngineGraphicsAPI.h  IEngineSceneAPI.h  IEngineStorageAPI.h  IEngineXMLReader.h  IEnigneXMLWriter.h
include/pimpex_coro/: Promise.hpp
include/storage/: EngineSceneStorage.hpp
include/utils/: RuleOfFive.hpp
src/: EngineBuildCommand.cpp  EngineCLI.cpp  EngineCamera.cpp  EngineCore.cpp  EngineDevCommand.cpp  EngineFileChecker.cpp  EngineGraphics.cpp  EngineInitCommand.cpp  EngineRenderer.cpp  EngineScene.cpp  EngineStorage.cpp  EngineUpdateCommand.cpp  EngineWindow.cpp  EngineXMLReader.cpp  EngineXMLWriter.cpp  Types.cpp  main.cpp
test/: test_e.cpp
